manual trigger done